server: support AllowInvalidAmounts validation option
